  compile correctly the code (ppx_deriving is mostly used in Logs anyway)
- Copy Cap.ml from semgrep and start using capabilities (and
  augmented semgrep.jsonnet to forbid Sys.xxx) (which then requires OCaml 4.0x
  but again it should be doable to just skip any object constructs in ocaml light
  as capabilities are just a typechecking thing without runtime impact).
- capabilties: Cap.fork, Cap.exec, Cap.exit, Cap.chdir, Cap.stdout, new Cap.env
- integrate Console.ml, CapConsole.ml, UConsole.ml from semgrep
- Start use poor's man Fpath.ml instead of Common.filename
- Start use capitalized module for lib_core/commons/, mk/, shell/ (thx Martin)
- use dune as an additional way to build XiX which then allows to
  use merlin and code navigation in efuns!!
- use ocamlformat (just on some .mli for now)

** devops

- Dockerfile (Ubuntu because Alpine is failing for old OCaml versions)
  and docker.yml GHA CI
- shell.nix Nix dev environment setup
  and nix.yml GHA CI

* 0.14 (Q2 2024) (Logging, Testing, CI)

** mk works again (but need plan9 (a.k.a. 9base) rc)

** internals

- Logging using poor's man Logs.ml

* 0.13 (Q1 2024) (CI build and test and semgrep checks (devops))
# Resume after long hiatus (2019-2023) due to our move to Italy,
# the birth of Nathalie, and especially my work for Semgrep.
# Bring again good stuff I learned from semgrep:
#  - GHA and CI regression testing
#  - Logs
#  - Semgrep checks (and semgrep.jsonnet)
#  - tests

** internals

- Started to use stdcompat for backward compatibility with
  old versions of OCaml.

** devops

- Github Actions (GHA) checks to make sure xix compiles.
  At least it compiles with 3.10.0 (thx to stdcompat), 4.04.0, 4.14.0,
  and even 5.1.0!
- first semgrep checks in semgrep.jsonnet :) and semgrep GHA workflow.
- some basic tests (also enforced in GHA) in test.sh

* -----------------------------------------------------------

* Big pause to work on semgrep for 2019/2020/2021/2022/2023
