@@ -1,1 +1,2 @@
 let exit (_caps : < Cap.exit; .. >) = exit
+let open_in (_caps : < Cap.open_in; ..>) = open_in
