@@ -1,4 +1,4 @@
 val is_builtin : string -> bool
 
 (* execute the builtin *)
-val dispatch : < Cap.chdir ; Cap.exit ; .. > -> string -> unit
+val dispatch : < Cap.chdir ; Cap.exit ; Cap.open_in; .. > -> string -> unit
